[package]
name = "bsatool_rs"
version = "0.1.4"
authors = ["arviceblot <logan@arviceblot.com>"]
license = "GPL-3.0"
description = "A tool work with BSA files"
edition = "2018"
readme = "README.md"
homepage = "https://github.com/arviceblot/bsatool_rs"
repository = "https://github.com/arviceblot/bsatool_rs"
keywords = ["cli", "archive", "morrowind"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.22" # from crates.io
indicatif = "0.16.0"
