[package]
name = "bsatool_rs"
version = "0.2.0"
authors = ["arviceblot <github@relay.arviceblot.com>"]
license = "GPL-3.0"
description = "A tool for working with BSA files"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/arviceblot/bsatool_rs"
repository = "https://github.com/arviceblot/bsatool_rs"
keywords = ["cli", "archive", "morrowind"]
categories = ["command-line-utilities"]

[workspace]

[dependencies]
clap = "3.1.18"
indicatif = "0.16.0"
bsatoollib = { path = "bsatoollib", version = "0.1.0" }
anyhow = "1.0.71"
tabled = "0.12.2"
