[package]
name = "bsatool_rs"
version = "0.3.0"
authors = ["arviceblot <github@relay.arviceblot.com>"]
license = "GPL-3.0"
description = "A tool for working with BSA files"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/arviceblot/bsatool_rs"
repository = "https://github.com/arviceblot/bsatool_rs"
keywords = ["cli", "archive", "morrowind"]
categories = ["command-line-utilities"]

[workspace]

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
indicatif = "0.17.5"
bsatoollib = { path = "bsatoollib", version = "0.2.0" }
anyhow = "1.0.71"
tabled = "0.12.2"
